tests/snapshots/examples_fixtures/aoc__2025__aoc_day6_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day6_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day6_haskell_style.flx:55:9
   |
55 |         split(trim(line), " ") |> filter(/x -> x != "")
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         ----------------------------------------------- parameter 1 has type `Array<String>`

   |         ----------------------------------------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<String>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:77:70
   |
77 |                 Some(v) -> collect_token_col(rows, col, row_idx + 1, push(acc, v)),
   |                                                                      ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:88:56
   |
88 |             transpose_token_rows(rows, col + 1, width, push(acc, col_tokens))
   |                                                        ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:96:51
   |
96 |             parse_tokens_to_ints(tokens, idx + 1, push(acc, parse_int(str_at(tokens, idx))))
   |                                                   ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:111:41
    |
111 |         let nums = parse_tokens_to_ints(slice(rev, 1, len(rev)), 0, [||])
    |                                         ^^^^^

Hint:
  Define it first: let slice = ...;


error[E001]: Duplicate Name

Duplicate binding: `rows` is already defined.

  examples/aoc/2025/aoc_day6_haskell_style.flx:119:9
    |
119 |         let rows = parse_words_lines(lines)
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day6_haskell_style.flx:0:1
  |


error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day6_haskell_style.flx:122:9
    |
122 |         cols |> fold(0, /(acc, col) -> acc + eval_day06a_col(col))
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |         ---------------------------------------------------------- parameter 1 has type `Array<_>`

    |         ---------------------------------------------------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<_>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:147:52
    |
147 |             transpose_lines(lines, col + 1, width, push(acc, col_str))
    |                                                    ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:168:17
    |
168 |                 push(acc, current)
    |                 ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:214:46
    |
214 |             read_compact_ints(cols, idx + 1, push(acc, read_compact_int(str_at(cols, idx))))
    |                                              ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:225:47
    |
225 |             let rest_nums = read_compact_ints(slice(group_cols, 1, len(group_cols)), 0, [||])
    |                                               ^^^^^

Hint:
  Define it first: let slice = ...;

Found 11 errors.
== stdout ==
<not executed>
